--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 	<article id="portfolio" class="wrapper style3">
 		<div class="container">
 			<header>
-				<h2>Here’s some stuff I work with recently.</h2>
+				<h2>Here’s some stuff I work with recently</h2>
 				<p></p>
 			</header>
 			<div class="row">
