featured image link update and box shadow

--- a/index.html
+++ b/index.html
@@ -53,73 +53,80 @@
 				<div class="col-4 col-6-medium col-12-small">
 					<article class="box style2">
 						<a href="https://jpcts.com/" class="image featured"><img
-								src="images/Journal-of-Pharmaceutical-Compounding-and-Therapeutics.jpg" alt="" /></a>
-						<p>Journal of Pharmaceutical
-							Compounding and Therapeutics</p>
+								src="images/Journal-of-Pharmaceutical-Compounding-and-Therapeutics.jpg" alt="" />
+							<p>Journal of Pharmaceutical
+								Compounding and Therapeutics</p>
+						</a>
 					</article>
 				</div>
 				<div class="col-4 col-6-medium col-12-small">
 					<article class="box style2">
 						<a href="https://www.proshikahrdc.com/" class="image featured"><img
-								src="images/Proshika-Human-Resource-Development-Center.jpg" alt="" /></a>
-						<p>Proshika Human Resource<br> Development Center</p>
-					</article>
+								src="images/Proshika-Human-Resource-Development-Center.jpg" alt="" />
+							<p>Proshika Human Resource<br> Development Center</p>
+						</a>
 				</div>
 				<div class="col-4 col-6-medium col-12-small">
 					<article class="box style2">
 						<a href="https://richcottonapparels.net/" class="image featured"><img
-								src="images/Richcotton-Apparel-Limited.jpg" alt="" /></a>
-						<p>RICH COTTON <br>APPARELS LIMITED
-						</p>
+								src="images/Richcotton-Apparel-Limited.jpg" alt="" />
+							<p>RICH COTTON <br>APPARELS LIMITED
+							</p>
+						</a>
 					</article>
 				</div>
 
 
 				<div class="col-4 col-6-medium col-12-small">
 					<article class="box style2">
-						<a href="https://jpcts.com/" class="image featured"><img src="images/Home-EBL-PIC.jpg"
-								alt="" /></a>
-						<p>EBL <br>PERSONALIZED IMAGE CARD</p>
+						<a href="https://jpcts.com/" class="image featured"><img src="images/Home-EBL-PIC.jpg" alt="" />
+							<p>EBL <br>PERSONALIZED IMAGE CARD</p>
+						</a>
 					</article>
 				</div>
 				<div class="col-4 col-6-medium col-12-small">
 					<article class="box style2">
 						<a href="https://lankabangla-investments.com/" class="image featured"><img
-								src="images/LankaBangla-–-Growing-Together….jpg" alt="" /></a>
-						<p>LankaBangla Investments<br> Limited (LBIL)</p>
+								src="images/LankaBangla-–-Growing-Together….jpg" alt="" />
+							<p>LankaBangla Investments<br> Limited (LBIL)</p>
+						</a>
 					</article>
 				</div>
 				<div class="col-4 col-6-medium col-12-small">
 					<article class="box style2">
 						<a href="https://meistersourcing.com/" class="image featured"><img
-								src="images/meistersourcing-–-Let-s-Dream-Big.jpg" alt="" /></a>
-						<p>Meistersourcing apparel buying and sourcing company
-						</p>
+								src="images/meistersourcing-–-Let-s-Dream-Big.jpg" alt="" />
+							<p>Meistersourcing apparel buying and sourcing company
+							</p>
+						</a>
 					</article>
 				</div>
 
 				<div class="col-4 col-6-medium col-12-small">
 					<article class="box style2">
 						<a href="https://luxuryruza.com/" class="image featured"><img src="images/Home-EBL-PIC.jpg"
-								alt="" /></a>
-						<p>Ruza Electric <br> Co. Ltd.</p>
+								alt="" />
+							<p>Ruza Electric <br> Co. Ltd.</p>
+						</a>
 					</article>
 				</div>
 				<div class="col-4 col-6-medium col-12-small">
 					<article class="box style2">
 						<a href="https://www.neelhawabeachresort.com/" class="image featured"><img
-								src="images/Neel-Hawa-–-Neel-Hawa.jpg" alt="" /></a>
-						<p>Neel Hawa <br> Beach Resort</p>
+								src="images/Neel-Hawa-–-Neel-Hawa.jpg" alt="" />
+							<p>Neel Hawa <br> Beach Resort</p>
+						</a>
 					</article>
 				</div>
 				<div class="col-4 col-6-medium col-12-small">
 					<article class="box style2">
 						<a href="https://fna-apparel.com.au/" class="image featured"><img
 								src="images/F-A-Apparel-Pty-Ltd-–-F-A.jpg">
+
+							<p>
+								F&A Apparel<br> Pty Ltd
+							</p>
 						</a>
-						<p>
-							F&A Apparel<br> Pty Ltd
-						</p>
 					</article>
 				</div>
 			</div>
